--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         tools:context=".MainActivity">
 
         <TextView
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/today_s_date"
@@ -42,7 +43,7 @@
 
         <EditText
 
-            android:id="@+id/editTextDate2"
+            android:id="@+id/todayDate"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="6dp"
